<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
  xmlns="http://maven.apache.org/POM/4.0.0"
  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <artifactId>time-deposit-kata</artifactId>

  <build>
    <plugins>
      <plugin>
        <artifactId>openapi-generator-maven-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <apiPackage>org.ikigaidigital.adapter.in.rest.generated.api</apiPackage>
              <configOptions>
                <interfaceOnly>true</interfaceOnly>
                <openApiNullable>true</openApiNullable>
                <skipDefaultInterface>true</skipDefaultInterface>
                <useSpringBoot3>true</useSpringBoot3>
                <useTags>true</useTags>
              </configOptions>
              <generateApis>true</generateApis>
              <generateModels>true</generateModels>
              <generateSupportingFiles>false</generateSupportingFiles>
              <generatorName>spring</generatorName>
              <inputSpec>${project.basedir}/src/main/resources/openapi/api.yaml</inputSpec>
              <modelPackage>org.ikigaidigital.adapter.in.rest.generated.model</modelPackage>
            </configuration>
            <goals>
              <goal>generate</goal>
            </goals>
          </execution>
        </executions>
        <groupId>org.openapitools</groupId>
        <version>7.4.0</version>
      </plugin>
      <plugin>
        <artifactId>build-helper-maven-plugin</artifactId>
        <executions>
          <execution>
            <configuration>
              <sources>
                <source>${project.build.directory}/generated-sources/openapi/src/main/java</source>
              </sources>
            </configuration>
            <goals>
              <goal>add-source</goal>
            </goals>
            <id>add-generated-sources</id>
            <phase>generate-sources</phase>
          </execution>
        </executions>
        <groupId>org.codehaus.mojo</groupId>
      </plugin>
      <plugin>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <annotationProcessorPaths>
            <path>
              <artifactId>lombok</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <artifactId>mapstruct-processor</artifactId>
              <groupId>org.mapstruct</groupId>
              <version>${mapstruct.version}</version>
            </path>
            <path>
              <artifactId>lombok-mapstruct-binding</artifactId>
              <groupId>org.projectlombok</groupId>
              <version>${lombok-mapstruct-binding.version}</version>
            </path>
          </annotationProcessorPaths>
          <source>17</source>
          <target>17</target>
        </configuration>
        <groupId>org.apache.maven.plugins</groupId>
      </plugin>
      <plugin>
        <artifactId>jacoco-maven-plugin</artifactId>
        <configuration>
          <excludes>
            <exclude>org/ikigaidigital/adapter/in/rest/generated/**</exclude>
            <exclude>org/ikigaidigital/TimeDepositApplication.class</exclude>
            <exclude>org/ikigaidigital/adapter/in/rest/mapper/*Impl.class</exclude>
            <exclude>org/ikigaidigital/adapter/out/persistence/mapper/*Impl.class</exclude>
            <exclude>org/ikigaidigital/adapter/out/persistence/entity/*Entity.class</exclude>
            <exclude>org/ikigaidigital/adapter/in/rest/config/SecurityConfig.class</exclude>
            <exclude>org/ikigaidigital/adapter/in/rest/config/DomainConfig.class</exclude>
            <exclude>org/ikigaidigital/adapter/out/persistence/config/CacheConfig.class</exclude>
          </excludes>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>prepare-agent</goal>
            </goals>
            <id>prepare-agent</id>
          </execution>
          <execution>
            <goals>
              <goal>report</goal>
            </goals>
            <id>report</id>
            <phase>verify</phase>
          </execution>
          <execution>
            <configuration>
              <rules>
                <rule>
                  <element>BUNDLE</element>
                  <limits>
                    <limit>
                      <counter>LINE</counter>
                      <minimum>0.80</minimum>
                      <value>COVEREDRATIO</value>
                    </limit>
                  </limits>
                </rule>
              </rules>
            </configuration>
            <goals>
              <goal>check</goal>
            </goals>
            <id>check</id>
            <phase>verify</phase>
          </execution>
        </executions>
        <groupId>org.jacoco</groupId>
        <version>${jacoco.version}</version>
      </plugin>
      <plugin>
        <artifactId>sonar-maven-plugin</artifactId>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <version>${sonar-maven-plugin.version}</version>
      </plugin>
      <plugin>
        <artifactId>dependency-check-maven</artifactId>
        <configuration>
          <failBuildOnCVSS>7</failBuildOnCVSS>
          <formats>
            <format>HTML</format>
            <format>JSON</format>
          </formats>
        </configuration>
        <groupId>org.owasp</groupId>
        <version>${owasp-dependency-check.version}</version>
      </plugin>
    </plugins>
  </build>

  <dependencies>
    <dependency>
      <artifactId>spring-boot-starter-web</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-data-jpa</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-cache</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-security</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.postgresql</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>liquibase-core</artifactId>
      <groupId>org.liquibase</groupId>
    </dependency>
    <dependency>
      <artifactId>caffeine</artifactId>
      <groupId>com.github.ben-manes.caffeine</groupId>
    </dependency>
    <dependency>
      <artifactId>mapstruct</artifactId>
      <groupId>org.mapstruct</groupId>
      <version>${mapstruct.version}</version>
    </dependency>
    <dependency>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <groupId>org.springdoc</groupId>
      <version>2.5.0</version>
    </dependency>
    <dependency>
      <artifactId>jackson-databind-nullable</artifactId>
      <groupId>org.openapitools</groupId>
      <version>0.2.6</version>
    </dependency>
    <dependency>
      <artifactId>lombok</artifactId>
      <groupId>org.projectlombok</groupId>
      <scope>provided</scope>
      <version>${lombok.version}</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-actuator</artifactId>
      <groupId>org.springframework.boot</groupId>
    </dependency>
    <dependency>
      <artifactId>micrometer-registry-prometheus</artifactId>
      <groupId>io.micrometer</groupId>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>logstash-logback-encoder</artifactId>
      <groupId>net.logstash.logback</groupId>
      <version>${logstash-logback-encoder.version}</version>
    </dependency>
    <dependency>
      <artifactId>spring-boot-devtools</artifactId>
      <groupId>org.springframework.boot</groupId>
      <optional>true</optional>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-starter-test</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>spring-boot-testcontainers</artifactId>
      <groupId>org.springframework.boot</groupId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <artifactId>testcontainers</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
      <version>${testcontainers.version}</version>
    </dependency>
    <dependency>
      <artifactId>postgresql</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
      <version>${testcontainers.version}</version>
    </dependency>
    <dependency>
      <artifactId>junit-jupiter</artifactId>
      <groupId>org.testcontainers</groupId>
      <scope>test</scope>
      <version>${testcontainers.version}</version>
    </dependency>
    <dependency>
      <artifactId>archunit-junit5</artifactId>
      <groupId>com.tngtech.archunit</groupId>
      <scope>test</scope>
      <version>1.2.1</version>
    </dependency>
  </dependencies>
  <groupId>org.ikigaidigital</groupId>
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <artifactId>spring-boot-starter-parent</artifactId>
    <groupId>org.springframework.boot</groupId>
    <relativePath/>
    <version>3.2.5</version>
  </parent>

  <profiles>
    <profile>
      <build>
        <plugins>
          <plugin>
            <artifactId>spring-boot-maven-plugin</artifactId>
            <configuration>
              <jvmArguments>-agentlib:jdwp=transport=dt_socket,server=y,suspend=n,address=*:5005</jvmArguments>
            </configuration>
            <groupId>org.springframework.boot</groupId>
          </plugin>
        </plugins>
      </build>
      <id>debug</id>
    </profile>
  </profiles>
  <properties>
    <jacoco.version>0.8.12</jacoco.version>
    <logstash-logback-encoder.version>7.4</logstash-logback-encoder.version>
    <lombok-mapstruct-binding.version>0.2.0</lombok-mapstruct-binding.version>

    <!-- Dependency versions -->
    <lombok.version>1.18.32</lombok.version>
    <mapstruct.version>1.5.5.Final</mapstruct.version>
    <maven.compiler.source>17</maven.compiler.source>
    <maven.compiler.target>17</maven.compiler.target>
    <owasp-dependency-check.version>9.1.0</owasp-dependency-check.version>

    <!-- Plugin versions -->
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <sonar-maven-plugin.version>3.11.0.3922</sonar-maven-plugin.version>
    <sonar.coverage.jacoco.xmlReportPaths>${project.build.directory}/site/jacoco/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>

    <!-- SonarQube configuration -->
    <sonar.projectKey>ikigaidigital_time-deposit-kata</sonar.projectKey>
    <testcontainers.version>1.20.4</testcontainers.version>
  </properties>

  <version>0.11.0</version>
</project>
